<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fgr"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="40dip"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:theme="@style/EditTextAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameTIET"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:theme="@style/EditTextAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordTIET"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerB"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:textSize="18sp"
                android:theme="@style/RaisedButtonDark" />

            <Button
                android:id="@+id/loginB"
                android:layout_height="55dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="18sp"
                android:theme="@style/RaisedButtonDark"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>