<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/nameTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:theme="@style/EditTextAccent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/nameTIET"
                            android:hint="@string/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phoneTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:theme="@style/EditTextAccent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phoneTIET"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/emailTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:theme="@style/EditTextAccent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/emailTIET"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>

                    <!--<android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:theme="@style/EditTextAccent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/usernameTIET"
                            android:hint="@string/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:theme="@style/EditTextAccent">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/passwordTIET"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </android.support.design.widget.TextInputLayout>-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/registerB"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_weight="0"
                            android:text="@string/accept"
                            android:textSize="18sp"
                            android:theme="@style/RaisedButtonDark" />

                        <Button
                            android:id="@+id/cancelB"
                            android:layout_height="55dp"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:text="@string/cancel"
                            android:textSize="18sp"
                            android:theme="@style/RaisedButtonDark"/>




                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <ListView
                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </ListView>

        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>